[project]
name = "myproxy"
version = "0.1.0"
description = "HTTPS proxy tool with mitmproxy for request/response interception"
requires-python = ">=3.10"
dependencies = [
    "mitmproxy>=10.0.0",
    "click>=8.1.0",
]

[project.scripts]
myproxy = "myproxy.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"